--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ease",
   "version": "0.0.1",
-  "description": "",
+  "description": "A tiny javascript easing package with no dependencies.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
