--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "test": "jest ./src"
   },
   "repository": {
     "type": "git",
@@ -26,8 +27,12 @@
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.1.0",
+    "@types/jest": "^29.5.0",
     "glob": "^9.3.4",
+    "jest": "^29.5.0",
+    "jest-extended": "^3.2.4",
     "rollup": "^3.20.2",
+    "ts-jest": "^29.1.0",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   }
