--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "rollup -c",
-    "test": "jest ./src"
+    "test": "jest ./src --coverage"
   },
   "repository": {
     "type": "git",
